whisper/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisper-internal
  namespace: whisper
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - whisper.i.shion1305.com
  rules:
    - backendRefs:
        - name: whisper
          port: 8000
